--- a/Site-Introducao/index.html
+++ b/Site-Introducao/index.html
@@ -28,7 +28,7 @@
                 <img src="./img/eu.png"></img>
             </div>
             <h1>Cauê Felix Urbini</h1>
-            <h2>Cientista da Computação</h2>
+            <h2>Desenvolvedor Full-Stack</h2>
         </header>
         <main>
             <section>
